--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = []
+dependencies = [
+    "fastapi>=0.115.12",
+    "pydantic>=2.11.3",
+]
 
 [build-system]
 requires = ["hatchling"]
@@ -15,6 +18,10 @@ dev = [
     "fastapi>=0.115.12",
     "httpx>=0.28.1",
     "nox>=2025.2.9",
+    "passlib>=1.7.4",
     "pydantic>=2.11.3",
+    "pyjwt>=2.10.1",
     "pytest>=8.3.5",
+    "python-multipart>=0.0.20",
+    "unicorn>=2.1.3",
 ]
