--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,27 @@
 [project]
 name = "fastapi-shield"
 version = "0.1.0"
-description = "Add your description here"
+description = "Shield is a FastAPI decorator that provides a simple shield your API Endpoints."
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "fastapi>=0.115.12",
     "pydantic>=2.11.3",
+]
+authors = [
+    { name="Jim Chng", email="jimchng@outlook.com" },
+]
+
+[tool.hatch.build]
+exclude = [
+    "tests",
+    "examples",
+    "docs",
+    "scripts",
+    "scripts/*",
+    "noxfile.py",
+    ".gitignore",
+    "LICENSE",
 ]
 
 [build-system]
