--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dev = [
     "pydantic>=2.11.3",
     "pyjwt>=2.10.1",
     "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
     "python-multipart>=0.0.20",
     "unicorn>=2.1.3",
 ]
