--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
-    "fastapi>=0.115.12",
+    "fastapi[standard]>=0.115.12",
     "httpx>=0.28.1",
     "nox>=2025.2.9",
     "passlib>=1.7.4",
@@ -40,4 +40,5 @@ dev = [
     "pytest-asyncio>=0.26.0",
     "python-multipart>=0.0.20",
     "unicorn>=2.1.3",
+    "uvicorn>=0.34.2",
 ]
