--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "fastapi>=0.115.12",
-    "pydantic>=2.11.3",
 ]
 authors = [
     { name="Jim Chng", email="jimchng@outlook.com" },
@@ -14,6 +13,7 @@ authors = [
 
 [tool.hatch.build]
 exclude = [
+    "assets",
     "tests",
     "examples",
     "docs",
