--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,15 @@ exclude = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.ruff]
+exclude = [
+    "examples",
+    "docs",
+    "scripts",
+    "scripts/*",
+    "noxfile.py",
+]
+
 [dependency-groups]
 dev = [
     "fastapi[standard]>=0.115.12",
