--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 description = "Shield is a FastAPI decorator that provides a simple shield your API Endpoints."
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = [
-    "fastapi>=0.115.12",
-]
-authors = [
-    { name="Jim Chng", email="jimchng@outlook.com" },
-]
+dependencies = ["fastapi>=0.100.1"]
+authors = [{ name = "Jim Chng", email = "jimchng@outlook.com" }]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/fastapi_shield"]
 
 [tool.hatch.build]
 exclude = [
@@ -29,25 +28,20 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.ruff]
-exclude = [
-    "examples",
-    "docs",
-    "scripts",
-    "scripts/*",
-    "noxfile.py",
-]
+exclude = ["examples", "docs", "scripts", "scripts/*", "noxfile.py"]
+include = ["src/fastapi_shield/*"]
 
 [dependency-groups]
 dev = [
-    "fastapi[standard]>=0.115.12",
-    "httpx>=0.28.1",
-    "nox>=2025.2.9",
-    "passlib>=1.7.4",
-    "pydantic>=2.11.3",
-    "pyjwt>=2.10.1",
-    "pytest>=8.3.5",
-    "pytest-asyncio>=0.26.0",
-    "python-multipart>=0.0.20",
-    "unicorn>=2.1.3",
-    "uvicorn>=0.34.2",
+    "fastapi[standard]>=0.100.1",
+    "httpx>=0.24.0",
+    "nox>=2023.0.0",
+    "passlib>=1.7.0",
+    "pydantic>=2.0.0",
+    "pyjwt>=2.0.0",
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
+    "python-multipart>=0.0.5",
+    "unicorn>=2.0.0",
+    "uvicorn>=0.20.0",
 ]
