--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ exclude = ["examples", "docs", "scripts", "scripts/*", "noxfile.py"]
 dev = [
     "fastapi[standard]>=0.100.1",
     "httpx>=0.24.0",
+    "isort>=6.0.1",
     "nox>=2023.0.0",
     "passlib>=1.7.0",
     "pydantic>=2.0.0",
