--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dev = [
     "isort>=6.0.1",
     "nox>=2023.0.0",
     "passlib>=1.7.0",
+    "pre-commit>=4.2.0",
     "pydantic>=2.0.0",
     "pyjwt>=2.0.0",
     "pylint>=3.3.6",
