--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "fastapi-shield"
 version = "0.1.0"
-description = "Shield is a FastAPI decorator that provides a simple shield your API Endpoints."
+description = "Shield is a FastAPI decorator that provides a simple shield for your API Endpoints to shield off unwanted requests."
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = ["fastapi>=0.100.1"]
