--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ dev = [
     "passlib>=1.7.0",
     "pre-commit>=4.2.0",
     "pydantic>=2.0.0",
+    "pydantic-settings>=2.9.1",
     "pyjwt>=2.0.0",
     "pylint>=3.3.6",
     "pytest>=7.0.0",
