--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
     "python-multipart>=0.0.5",
+    "slowapi>=0.1.9",
     "unicorn>=2.0.0",
     "uvicorn>=0.20.0",
 ]
