docs/user-guide/string-types.md DONE

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -39,6 +39,7 @@ nav:
       - Authentication Patterns: user-guide/authentication-patterns.md
       # Custom Initialization Done
       - Custom Initialization: user-guide/custom-initialization.md
+      # String Types Done
       - String Types: user-guide/string-types.md
       - Request Validation: user-guide/request-validation.md
       - API Examples: user-guide/examples.md
