--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -51,6 +51,7 @@ nav:
       # Authentication Examples Done
       - Authentication Examples: examples/authentication_examples.md
       - Advanced Examples: examples/advanced_examples.md
+      # Real World Examples Done
       - Real World Examples: examples/real_world.md
       - Using with Pydantic: examples/using_with_pydantic.md
   - Advanced Topics:
