--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -50,6 +50,7 @@ nav:
       - Basic Examples: examples/basic_examples.md
       # Authentication Examples Done
       - Authentication Examples: examples/authentication_examples.md
+      # Advanced Examples Done
       - Advanced Examples: examples/advanced_examples.md
       # Real World Examples Done
       - Real World Examples: examples/real_world.md
