--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -59,6 +59,7 @@ nav:
   - Advanced Topics:
       - Type Inheritance: advanced-topics/type-inheritance.md
       - JWT Authentication: advanced-topics/jwt-authentication.md
+      # Dependency Injection Done
       - Dependency Injection: advanced-topics/dependency-injection.md
       - Method Interception: advanced-topics/method-interception.md
       - Security Best Practices: advanced-topics/security-best-practices.md
