--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,64 @@
 [project]
 name = "fastapi-shield"
 version = "0.2.0"
-description = "Shield is a FastAPI decorator that provides a simple shield for your API Endpoints to shield off unwanted requests."
+description = "A comprehensive FastAPI decorator library providing request validation, authentication, rate limiting, and security shields for API endpoints"
 readme = "README.md"
-requires-python = ">=3.9"
-dependencies = ["fastapi>=0.100.1"]
+license = { text = "MIT" }
 authors = [{ name = "Jim Chng", email = "jimchng@outlook.com" }]
+maintainers = [{ name = "Jim Chng", email = "jimchng@outlook.com" }]
+keywords = [
+    "fastapi",
+    "api",
+    "shield",
+    "decorator",
+    "validation",
+    "authentication",
+    "rate-limiting",
+    "security",
+    "web",
+    "async",
+    "python3",
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Web Environment",
+    "Framework :: FastAPI",
+    "Framework :: AsyncIO",
+    "Intended Audience :: Developers",
+    "Intended Audience :: System Administrators",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Internet :: WWW/HTTP",
+    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development :: Libraries :: Application Frameworks",
+    "Topic :: System :: Networking",
+    "Topic :: Security",
+    "Typing :: Typed",
+]
+requires-python = ">=3.9"
+dependencies = [
+    "fastapi>=0.100.1",
+    "typing-extensions>=4.0.0; python_version<'3.10'",
+]
+dynamic = []
+
+[project.urls]
+Homepage = "https://github.com/jimchng/fastapi-shield"
+Repository = "https://github.com/jimchng/fastapi-shield.git"
+Documentation = "https://fastapi-shield.asyncmove.com/"
+"Bug Tracker" = "https://github.com/jimchng/fastapi-shield/issues"
+"Feature Requests" = "https://github.com/jimchng/fastapi-shield/discussions"
+Funding = "https://github.com/sponsors/jimchng"
+
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/fastapi_shield"]
