--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,5 @@
 [build]
 command = """
-python -m pip install mkdocs && python -m pip install -r requirements-dev.txt
-mkdocs build
+python -m pip install mkdocs && python -m pip install -r requirements-dev.txt && mkdocs build
 """
 publish = "site"
