update tests.yaml in github action

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -105,6 +105,7 @@ jobs:
         #----------------------------------------------
       - name: Build HTML docs
         run: |
+          uv sync --group docs
           uv run mkdocs build
 
       # - name: Upload coverage to Codecov
