--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,6 +111,7 @@ dev = [
     "isort>=6.0.1",
     "nox>=2023.0.0",
     "passlib>=1.7.0",
+    "pexpect>=4.9.0",
     "pre-commit>=4.2.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.9.1",
