--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,6 +110,8 @@ dev = [
     "httpx>=0.24.0",
     "isort>=6.0.1",
     "nox>=2023.0.0",
+    "opentelemetry-api>=1.36.0",
+    "opentelemetry-sdk>=1.36.0",
     "passlib>=1.7.0",
     "pexpect>=4.9.0",
     "pre-commit>=4.2.0",
