--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,7 @@ dev = [
     "passlib>=1.7.0",
     "pexpect>=4.9.0",
     "pre-commit>=4.2.0",
+    "psutil>=5.8.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.9.1",
     "pyjwt>=2.0.0",
