--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,7 @@ dev = [
     "fastapi[standard]>=0.100.1",
     "httpx>=0.24.0",
     "isort>=6.0.1",
+    "jsonschema>=4.0.0",
     "nox>=2023.0.0",
     "opentelemetry-api>=1.36.0",
     "opentelemetry-sdk>=1.36.0",
