--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ classifiers = [
 requires-python = ">=3.9"
 dependencies = [
     "fastapi>=0.100.1",
+    "pyyaml>=6.0.2",
+    "toml>=0.10.2",
     "typing-extensions>=4.0.0; python_version<'3.10'",
 ]
 dynamic = []
