--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ classifiers = [
 requires-python = ">=3.9"
 dependencies = [
     "fastapi>=0.100.1",
+    "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "python-multipart>=0.0.20",
     "pyyaml>=6.0.2",
