--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "markdown>=3.8",
+    "psutil>=7.0.0",
     "python-multipart>=0.0.20",
     "pyyaml>=6.0.2",
     "toml>=0.10.2",
