--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,11 +45,14 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
+    "bcrypt>=4.3.0",
+    "cryptography>=45.0.6",
     "fastapi>=0.100.1",
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "markdown>=3.8",
     "psutil>=7.0.0",
+    "pyjwt>=2.10.1",
     "python-multipart>=0.0.20",
     "pyyaml>=6.0.2",
     "toml>=0.10.2",
