--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,14 +51,18 @@ dependencies = [
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "markdown>=3.8",
+    "numpy>=2.0.2",
+    "pandas>=2.3.1",
     "psutil>=7.0.0",
     "pyjwt>=2.10.1",
     "python-multipart>=0.0.20",
     "pyyaml>=6.0.2",
+    "scikit-learn>=1.6.1",
     "toml>=0.10.2",
     "typing-extensions>=4.0.0; python_version<'3.10'",
     "uvicorn>=0.34.2",
     "websockets>=15.0.1",
+    "xgboost>=2.1.4",
 ]
 dynamic = []
 
