--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,7 +105,7 @@ ignore-paths = ["tests/", "examples/", "docs/", "scripts/"]
 
 [dependency-groups]
 dev = [
-    "bcrypt>=4.3.0",
+    "bcrypt==4.3.0",
     "fastapi[standard]>=0.100.1",
     "httpx>=0.24.0",
     "isort>=6.0.1",
