--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -140,19 +140,19 @@ jobs:
           name: wheels-${{ matrix.os }}-${{ matrix.arch }}-py${{ matrix.python-version }}
           path: dist/*.whl
 
-  upload_to_pypi:
-    if: startsWith(github.ref, 'refs/tags/v')
-    needs: ["build_sdist", "build_wheels"]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          path: wheels
-          pattern: wheels-*
-          merge-multiple: true
+  # upload_to_pypi:
+  #   if: startsWith(github.ref, 'refs/tags/v')
+  #   needs: ["build_sdist", "build_wheels"]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         path: wheels
+  #         pattern: wheels-*
+  #         merge-multiple: true
 
-      - uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          password: ${{ secrets.PYPI_TOKEN }}
-          packages_dir: wheels/
-          skip_existing: true
+  #     - uses: pypa/gh-action-pypi-publish@release/v1
+  #       with:
+  #         password: ${{ secrets.PYPI_TOKEN }}
+  #         packages_dir: wheels/
+  #         skip_existing: true
